# Copyright (C) 2017-2024 Veronique Geoffroy (veronique.geoffroy@inserm.fr)                                #
#                                                                                                          #
############################################################################################################


For more details, please see the README file.

January,  , 2024, AnnotSV version 3.4
	- Add 2 new features: Closest_left and Closest_right
		=> AnnotSV expands the SV up to 5 megabases in both direction (left and right) and then tries to find neighboring genes
		   In both directions, the closest gene to the SV is reported
	- Take use of PhenoGenius (Yauy et al., 2023) for the phenotype-driven analysis and the ranking
		- Add 3 new features: PhenoGenius_score, PhenoGenius_phenotype and PhenoGenius_specificity
	- Gene names are now sorted by genomic coordinates and no longer sorted alphabetically ("Gene_name" feature)
	- Add new regulatory elements annotations:
		- Activity-by-Contact (ABC) model annotations
		- Massively Parallel Reporter assays (MPRA) annotations
	- Add benign SV annotation:
		- from gnomad v4 (GRCh38) (issue 201)
		- from PACBIO long reads: HPRC dataset (GRCh38) (issue 202)
	- Fix misleading OMIM annotation (issues 156, 132)
	- Add "NCBI_gene_ID" annotation
	- Update of the "contact" recommendations in output (from email to GitHub)

January, 15, 2024, AnnotSV version 3.3.9
	- Fix a bug when setting the "hpoVersion" variable (issue 207)

December, 22, 2023, AnnotSV version 3.3.8
	- Add of 34 unit tests

November, 03, 2023, AnnotSV version 3.3.7
	- Fix a domain error (issue 199)
	- Include code to allow FranceGenRef benign SV annotation (856 WGS with ancestries in different regions of France)
	  WARNING: not supplied as part of the AnnotSV sources. 
	- Optimize access to the exomiser application properties file for use with singularity/bioconda
	- Allow uppercase file extensions (".VCF", ".BED" or ".VCF.GZ") 